docs: document build requirements in CLAUDE
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>